# isolarium

./: .gitignore  .gitleaks.toml  .pre-commit-config.yaml  CLAUDE.md  CODE_SCENE.md  LICENSE.md  Makefile  README.md  codescene-precommit.sh  go.mod  go.sum  pid.yaml
.github/workflows/: ci.yml  make-minor-release.yml
cmd/isolarium/: e2e_claude_container_interactive_test.go  e2e_claude_container_test.go  e2e_claude_helpers_test.go  e2e_claude_nono_interactive_test.go  e2e_claude_nono_test.go  e2e_claude_vm_interactive_test.go  e2e_claude_vm_test.go  e2e_gradlew_container_test.go  e2e_gradlew_nono_test.go  main.go  (+14 more)
scripts/: calculate-minor-release.sh  make-minor-release.sh  set-gh-secrets.sh  trigger-minor-release.sh
test-scripts/: clean.sh  test-all.sh  test-claude-integration.sh  test-cleanup.sh  test-container-isolation-scripts.sh  test-docker-integration.sh  test-end-to-end-with-claude.sh  test-end-to-end-with-gradlew.sh  test-end-to-end-with-pytest.sh  test-end-to-end.sh  test-env-flag.sh  test-host-scripts.sh  test-lima-integration.sh  test-manual-claude.sh  test-no-docker-socket.sh  test-no-git-credentials.sh  test-no-host-mounts.sh  test-nono-integration.sh  test-precommit-in-container.sh  test-precommit-in-nono.sh  test-precommit-in-vm.sh  test-precommit.sh  test-security.sh  test-unit.sh
testdata/python-cli-app/: pyproject.toml
testdata/python-cli-app/src/greeter/: cli.py
testdata/python-cli-app/tests/: test_cli.py
vm-scripts/: copy-to-vm.sh  install-golang.sh  run-e2e-gradlew-in-vm.sh  test-nono-run-ubuntu-java.sh  test-nono-wrap-ubuntu-java.sh
(+159 files in other folders)
