[project]
name = "greeter"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = ["click"]

[project.scripts]
greeter = "greeter.cli:main"

[dependency-groups]
dev = ["pytest"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/greeter"]
